--- a/dental-backend/templates/service.yaml
+++ b/dental-backend/templates/service.yaml
@@ -9,7 +9,8 @@ spec:
   ports:
     - port: {{ .Values.service.port }}
       targetPort: http
-      protocol: TCP
+      protocol: TCP      
       name: http
+      nodePort: 30066
   selector:
     {{- include "dental-backend.selectorLabels" . | nindent 4 }}
