--- a/dental-frontend/templates/deployment.yaml
+++ b/dental-frontend/templates/deployment.yaml
@@ -34,24 +34,26 @@ spec:
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           env:
-          {{- include "helpers.list-env-variables" . | indent 12 }}            
+          {{- include "helpers.list-env-variables" . | indent 12 }}
+            - name: PORT
+              value: {{ .Values.service.port }}
           command: ["/services/frontend/start.sh"]
           ports:
             - name: http
-              containerPort: 3000
+              containerPort: {{ .Values.service.port }}
               protocol: TCP
           livenessProbe:
             httpGet:
               path: /health
-              port: 3000
-            initialDelaySeconds: 60
-            timeoutSeconds: 20    
+              port: {{ .Values.service.port }}
+            initialDelaySeconds: 20
+            timeoutSeconds: 10    
           readinessProbe:
             httpGet:
               path: /health
-              port: 3000
-            initialDelaySeconds: 60 
-            timeoutSeconds: 20                
+              port: {{ .Values.service.port }}
+            initialDelaySeconds: 30 
+            timeoutSeconds: 10                
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
       {{- with .Values.nodeSelector }}
